--- a/about/index.html
+++ b/about/index.html
@@ -157,7 +157,7 @@
     <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><figure><img src="https://maxim371.github.io/Maxwell_Portfolio_2/images/maxwell.jpeg"/>
 </figure>
 
-<p><em>The Hunchback of Notre-Dame</em> (French: <em>Notre-Dame de Paris</em>) is a French Romantic/Gothic novel by Victor Hugo, published in 1831. The original French title refers to Notre Dame Cathedral, on which the story is centered. English translator Frederic Shoberl named the novel The Hunchback of Notre Dame in 1833 because at the time, Gothic novels were more popular than Romance novels in England. The story is set in Paris, France in the Late Middle Ages, during the reign of Louis XI.</p>
+<p>Data Science and Finance are my passions. My name is Maxwell Kwarteng and I have been working in the Finance and Accounting field doing financial statement analytics for the last 6 years. I have held positions in companies ranging from startups to fortune 500 organizations. I transitioned into data science after enrolling in Lambda School. It has been an exciting and rewarding journey and can&rsquo;t wait to continue improving and providing data insights. I look forward to connecting with you.</p>
 </section>
     <section class="flex-ns flex-wrap justify-around mt5">
       
